welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:9: error: illegal start of simple expression
    }  die1=1
    ^